# interference

./: .gitmodules  CMakeLists.txt  README.md  build.cmd  build.sh
.github/workflows/: cmake-linux-build.yml  cmake-macos-build.yml  cmake-multi-platform.yml  cmake-windows-build.yml
docs/: Doxyfile  README.md
include/indk/: backend.h  computer.h  error.h  instance.h  interlink.h  math.h  neuralnet.h  neuron.h  position.h  profiler.h  system.h  types.h
include/indk/backends/: default.h  multithread.h  native.h  native_multithread.h  opencl.h  vulkan.h
include/indk/translators/: cl.h  cpu.h  vk.h
interlink-web/ui/: index.html
interlink-web/ui/src/: app.js  data.js  frames.js  graph-viewer.js  interlink.js  neuron-metrics.js  neuron-model.js  panels.js  project.js  settings.js  style.css  viewer.js  web-bridge.js
interlink-web/ui/src/cytoscape/: cytoscape.js
interlink-web/ui/themes/: style-light.css
python/: CMakeLists.txt  README.md  build.cmd  build.sh  pyproject.toml
python/indk/: __init__.py  __init__.pyi
python/samples/: classification.py  quick_start.py  test.py
python/src/: bindings.cpp
samples/classification/: CMakeLists.txt  main.cpp
samples/lang/: main.cpp
samples/multimodal/: main.cpp
samples/multimodal/structures/: structure.json
samples/test/: main.cpp
samples/test/structures/: structure_bench.json  structure_general.json
samples/vision/: CMakeLists.txt  bmp.hpp  main.cpp
samples/vision/structures/: structure.json
src/: backend.cpp  computer.cpp  error.cpp  instance.cpp  interlink.cpp  math.cpp  neuralnet.cpp  position.cpp  profiler.cpp  system.cpp
src/backends/: default.cpp  multithread.cpp  native.cpp  native_multithread.cpp  opencl.cpp  opencl_0.cpp  vulkan.cpp
src/backends/shaders/: neurons.comp  neurons.spv  pairs.comp  pairs.spv  receptors.comp  receptors.spv  vulkan_shaders.h
src/neuralnet/: neuralnet.cpp
src/neuron/: entry.cpp  neuron.cpp  receptor.cpp  synapse.cpp
src/translators/: cl.cpp  cpu.cpp  vk.cpp
web/ui/: index.html
web/ui/src/: account.js  app.js  data.js  frames.js  interlink.js  obfuscator.js  panels.js  project.js  settings.js  viewer.js
