[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "indk"
version = "3.1.0"
description = "Python bindings for the Interference neural network library"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "NickWare Group"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.scikit-build]
wheel.packages = ["indk"]
cmake.build-type = "Release"
cmake.args = ["-DPython3_FIND_REGISTRY=NEVER", "-DPython3_FIND_STRATEGY=LOCATION"]
